fix(goal list): make the delete button more visible when it is not selected

--- a/src/components/TabButtons.module.css
+++ b/src/components/TabButtons.module.css
@@ -29,7 +29,6 @@
 .deleteButton {
   width: 1cm;
   height: 1cm;
-  background-color: #f8f9fab9;
   border: none; 
   padding: 0;
   display: flex; 
